testComponent valide, test controller non valide